java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField6-hints.pass
Create field t in org.netbeans.test.java.hints.CreateField6
Create parameter t
Create local variable t
